--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,30 @@
+# Build tools
+setuptools>=65.0.0
+wheel>=0.37.0
+
 # Core Python packages
-pandas==2.0.3
-numpy==1.24.3
-matplotlib==3.7.2
-seaborn==0.12.2
+pandas>=2.0.3
+numpy>=1.24.3
+matplotlib>=3.7.2
+seaborn>=0.12.2
 
 # Machine Learning
-scikit-learn==1.3.0
+scikit-learn>=1.3.0
 
 # Deep Learning
-tensorflow==2.13.0
-keras==2.13.1
+tensorflow>=2.13.0
+keras>=2.13.1
 
 # NLP
-nltk==3.8.1
+nltk>=3.8.1
 
 # Web Framework
-flask==2.3.2
+flask>=2.3.2
 
 # Jupyter
-jupyter==1.0.0
-notebook==7.0.2
+jupyter>=1.0.0
+notebook>=7.0.2
 
 # Utilities
-requests==2.31.0
-beautifulsoup4==4.12.2
+requests>=2.31.0
+beautifulsoup4>=4.12.2
